--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "mocha": "^2.3.4"
   },
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
