--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "express": "^4.13.3",
+    "jquery": "^2.1.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   }
