--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-plugin-react": "^3.11.3",
     "gulp": "^3.9.0",
     "gulp-concat-css": "^2.2.0",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jscs-stylish": "^1.3.0",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
