--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "jquery": "^2.1.4",
+    "mongoose": "^4.3.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   }
