--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "babel-loader": "^6.2.0",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
+    "gulp-babel": "^6.1.1",
+    "marked": "^0.3.5",
+    "mocha": "^2.3.4",
+    "webpack-stream": "^3.1.0",
     "mocha": "^2.3.4"
   },
   "dependencies": {
