--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "gulp-babel": "^6.1.1",
     "marked": "^0.3.5",
     "mocha": "^2.3.4",
-    "webpack-stream": "^3.1.0",
-    "mocha": "^2.3.4"
+    "webpack-stream": "^3.1.0"
   },
   "dependencies": {
     "express": "^4.13.3",
