--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
     "eslint-plugin-react": "^3.11.3",
@@ -30,9 +31,9 @@
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
+    "marked": "^0.3.5",
     "minify": "^2.0.2",
     "mocha": "^2.3.4",
-    "marked": "^0.3.5",
     "webpack-stream": "^3.1.0"
   },
   "dependencies": {
@@ -41,6 +42,7 @@
     "mongodb-uri": "^0.9.7",
     "mongoose": "^4.3.1",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "redux": "^3.0.5"
   }
 }
