--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^6.2.0",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
+    "chai-http": "^1.0.0",
     "eslint-plugin-react": "^3.11.3",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
@@ -30,9 +31,9 @@
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
+    "marked": "^0.3.5",
     "minify": "^2.0.2",
     "mocha": "^2.3.4",
-    "marked": "^0.3.5",
     "webpack-stream": "^3.1.0"
   },
   "dependencies": {
