--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.3.13",
     "body-parser": "^1.14.1",
     "chai": "^3.4.1",
+    "chai-http": "^1.0.0",
     "gulp-babel": "^6.1.1",
     "marked": "^0.3.5",
     "mocha": "^2.3.4",
