--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jquery": "^2.1.4",
     "mongoose": "^4.3.1",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "superagent": "^1.6.1"
   }
 }
