--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-concat-css": "^2.2.0",
+    "gulp-eslint": "^1.1.1",
     "gulp-jscs": "^3.0.2",
     "gulp-jscs-stylish": "^1.3.0",
+    "gulp-minify-css": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
+    "marked": "^0.3.5",
     "minify": "^2.0.2",
     "mocha": "^2.3.4",
-    "marked": "^0.3.5",
     "webpack-stream": "^3.1.0"
   },
   "dependencies": {
