--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-stream": "^3.1.0"
   },
   "dependencies": {
+    "eat": "^0.1.1",
     "express": "^4.13.3",
     "jquery": "^2.1.4",
     "mongodb-uri": "^0.9.7",
