--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mongodb-uri": "^0.9.7",
     "mongoose": "^4.3.1",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "superagent": "^1.6.1"
   }
 }
