--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-jscs": "^3.0.2",
     "gulp-jscs-stylish": "^1.3.0",
     "gulp-minify-css": "^1.2.2",
+    "gulp-mocha": "^2.2.0",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
