--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "an lms for use by codefellows",
   "main": "server.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha test"
+    "test": "./node_modules/mocha/bin/mocha test && ./node_modules/jest-cli/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,10 @@
   "homepage": "https://github.com/cf-lms/lms#readme",
   "devDependencies": {
     "babel-core": "^6.3.17",
+    "babel-jest": "^6.0.1",
     "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "body-parser": "^1.14.1",
     "chai": "^3.4.1",
     "chai-http": "^1.0.0",
     "eslint-plugin-react": "^3.11.3",
@@ -34,12 +35,15 @@
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
+    "jest-cli": "^0.8.2",
     "marked": "^0.3.5",
     "minify": "^2.0.2",
     "mocha": "^2.3.4",
+    "react-addons-test-utils": "^0.14.3",
     "webpack-stream": "^3.1.0"
   },
   "dependencies": {
+    "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "jquery": "^2.1.4",
     "mongodb-uri": "^0.9.7",
