--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
@@ -26,8 +27,10 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-concat-css": "^2.2.0",
+    "gulp-eslint": "^1.1.1",
     "gulp-jscs": "^3.0.2",
     "gulp-jscs-stylish": "^1.3.0",
+    "gulp-minify-css": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
@@ -38,11 +41,14 @@
   },
   "dependencies": {
     "express": "^4.13.3",
+    "isomorphic-fetch": "^2.2.0",
     "jquery": "^2.1.4",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^4.3.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "redux": "^3.0.5"
+    "react-redux": "^4.0.1",
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.2"
   }
 }
