--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "minify": "^2.0.2",
     "mocha": "^2.3.4",
     "react-addons-test-utils": "^0.14.3",
+    "reduce-reducers": "^0.1.1",
     "webpack-stream": "^3.1.0"
   },
   "dependencies": {
