--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
     "webpack-stream": "^3.1.0"
   },
   "dependencies": {
-    "eat": "^0.1.1",
     "body-parser": "^1.14.2",
+    "eat": "^0.1.1",
     "express": "^4.13.3",
     "isomorphic-fetch": "^2.2.0",
     "jquery": "^2.1.4",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^4.3.1",
+    "object-assign": "^4.0.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.1",
