--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mocha": "^2.3.4",
     "react-addons-test-utils": "^0.14.3",
     "reduce-reducers": "^0.1.1",
+    "redux-mock-store": "0.0.4",
     "webpack-stream": "^3.1.0"
   },
   "dependencies": {
