--- a/.jscsrc
+++ b/.jscsrc
@@ -13,7 +13,7 @@
       "value": 320,
       "allExcept": ["comments", "regex"]
     },
-    "validateIndentation": "\t",
+    "validateIndentation": 2,
     "validateQuoteMarks": "'",
 
     "disallowMultipleLineStrings": true,
