--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "cadet-parser": "^0.3.1",
+    "cookie-parser": "^1.4.0",
     "eat": "^0.1.1",
     "express": "^4.13.3",
     "isomorphic-fetch": "^2.2.0",
